# something

./: CMakeLists.txt  conventions.md  main.cpp
include/: app.cpp  app.h  object_info.cpp  object_info.h  render_component.cpp  render_component.h  result.h  types.h  utils.cpp  utils.h  window.cpp  window.h
include/game/: game.cpp  game.h  game_state.cpp  game_state.h
include/game/entity/: entity_base.cpp  entity_base.h  entity_types.h  player.cpp  player.h
include/game/geometry/: circle.h  point.cpp  point.h  rect.cpp  rect.h
include/game/math/: vec2.cpp  vec2.h
include/geometry/: circle.cpp  circle.h  point.cpp  point.h  rect.cpp  rect.h
include/input/: input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
include/logging/: logger.h
include/math/: vec2.h
include/platform/: SDL2_image_includes.h  SDL2_includes.h
include/render/: clickable_component.h  color.cpp  color.h  render_component.cpp  render_component.h  renderer.cpp  renderer.h
include/render/backends/: backend_types.h  renderer_interface.h
include/render/backends/opengl/: gl_renderer.cpp  gl_renderer.h  opengl_renderer.cpp  opengl_renderer.h
include/render/backends/sdl_gpu/: sdl_gpu_renderer.cpp  sdl_gpu_renderer.h
include/render/components/: base_component.h  clickable_component.h  render_component.h  sprite_component.h
include/render/components/ui/: text_field.cpp  text_field.h
include/render/ui/: text_field.h
shared/: transform.h
